Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignIntegerInteger.quorum
integer i = cast(integer, 5)
output i