Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignTextObjUndefined.quorum
Text x = undefined
Text i = cast(Text, x)